# synthir

./: .travis.yml  Cargo.toml  README.md
benches/: synthir.rs
src/: assembler.rs  definitions.rs  disassembler.rs  emulator.rs  execution.rs  expr.rs  lib.rs  main.rs  native.rs  op.rs  sample.rs  stmt.rs  stochastic.rs  templates.rs  utils.rs  verify.rs  work.rs  x86_64.rs  x86_64_gen.rs
